# Linux-Socket-ori-Cmake

Linux-Socket-ori-Cmake/: CMakeLists.txt  CMakeSettings.json
Linux-Socket-ori-Cmake/lib/: CMakeLists.txt  error.c  str_cli.c  str_echo.c  unp.h  wrapsock.c  wrapstdio.c  wrapunix.c
Linux-Socket-ori-Cmake/tcpcliserv/: CMakeLists.txt  tcpcli01.c  tcpserv01.c
Linux-Socket-ori-Cmake/test/: CMakeLists.txt  test.c
